force-app/main/default/objects/Forecast__c/fields/Actual_Plan_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Plan_Sales__c</fullName>
    <description>Actual plans sold. Sum of opportunities added to this forecast.</description>
    <inlineHelpText>Actual plans sold. Sum of opportunities added to this forecast.</inlineHelpText>
    <label>Actual Plan Sales</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>