force-app/main/default/objects/Forecast__c/fields/Actual_Price_Per_Plan__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price_Per_Plan__c</fullName>
    <formula>IF(Actual_Plan_Sales__c &gt; 0, Actual_Revenue__c /  Actual_Plan_Sales__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Price Per Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>