force-app/main/default/objects/Forecast__c/fields/Actual_v_Forecast_Plans_Sold__c.field-meta.xml
<CustomField>
    <fullName>Actual_v_Forecast_Plans_Sold__c</fullName>
    <formula>Actual_Plan_Sales__c / Plan_Sales__c</formula>
    <label>Actual v Forecast Plans Sold</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>