force-app/main/default/objects/Forecast__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of forecast</description>
    <inlineHelpText>End date of forecast</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>