force-app/main/default/objects/Forecast__c/fields/Forecast_Plan__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Plan__c</fullName>
    <description>Forecast plan that forecast is built from</description>
    <inlineHelpText>Forecast plan that forecast is built from</inlineHelpText>
    <label>Forecast Plan</label>
    <referenceTo>Forecast_Plan__c</referenceTo>
    <relationshipLabel>Forecasts</relationshipLabel>
    <relationshipName>Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>