force-app/main/default/objects/Forecast__c/fields/Forecast_Type__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Type__c</fullName>
    <description>Forecast type from master forecast plan</description>
    <formula>TEXT(Forecast_Plan__r.Forecast_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast type from master forecast plan</inlineHelpText>
    <label>Forecast Type</label>
    <type>Text</type>
</CustomField>