force-app/main/default/objects/Forecast__c/fields/Lead_to_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_Close_Rate__c</fullName>
    <description>Plans divided by leads</description>
    <inlineHelpText>Plans divided by leads</inlineHelpText>
    <label>Lead-to-Close Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>