force-app/main/default/objects/Forecast__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <description>Number of leads expected in timeframe</description>
    <inlineHelpText>Number of leads expected in timeframe</inlineHelpText>
    <label>Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>