force-app/main/default/objects/Forecast__c/fields/Plan_Sales__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sales__c</fullName>
    <description># of plans sold in timeframe</description>
    <inlineHelpText># of plans sold in timeframe</inlineHelpText>
    <label>Plan Sales</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>