force-app/main/default/objects/Forecast__c/fields/Price_per_plan__c.field-meta.xml
<CustomField>
    <fullName>Price_per_plan__c</fullName>
    <description>Average price per plan for forecast</description>
    <inlineHelpText>Average price per plan for forecast</inlineHelpText>
    <label>Price per plan</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>