force-app/main/default/objects/Forecast__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product from Forecast Plan</description>
    <formula>TEXT(Forecast_Plan__r.Product__c )</formula>
    <inlineHelpText>Product from Forecast Plan</inlineHelpText>
    <label>Product</label>
    <type>Text</type>
</CustomField>