force-app/main/default/objects/Forecast__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Revenue attached to this forecast.</description>
    <inlineHelpText>Revenue attached to this forecast.</inlineHelpText>
    <label>Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>