force-app/main/default/objects/Forecast__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of forecast</description>
    <inlineHelpText>Start date of forecast</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>