force-app/main/default/objects/Forecast__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status from Forecast Plan</description>
    <formula>TEXT( Forecast_Plan__r.Status__c )</formula>
    <inlineHelpText>Status from Forecast Plan</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>